<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:orientation="vertical"
    android:showDividers="middle"
    app:cardCornerRadius="15dp"
    app:cardPreventCornerOverlap="true"
    card_view:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/MyTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_title"
            android:textAlignment="textStart"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingTop="15dp"
            android:text="@string/delete_dialog"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/boton_cancelar_delete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/text_shadow_white"
                android:text="@string/button_cancel_discard_changes"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp" />

            <Button
                android:id="@+id/boton_eliminar_delete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="#708FB3" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>