<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        app:srcCompat="@drawable/caja"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@null"
            android:textColorHint="@color/textcolor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableLeft="@drawable/ic_profile_icon"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="16sp"
                tools:ignore="ContentDescription,RtlHardcoded" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="23dp"
            android:background="@null"
            android:textColorHint="@color/textcolor">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_password_lock"
                android:drawableLeft="@drawable/ic_password_lock"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/line_view" />

        <Button
            android:id="@+id/boton_contra_olvidada"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:text="@string/olvido_contra"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/boton_login"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_rounded"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/miniTitleColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingEnd="5dp"
                android:text="@string/no_cuenta"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/boton_registro"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/crear_cuenta"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:backgroundTint="@color/cardview_shadow_end_color" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>