<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEDED"
    tools:context=".activity.DashboardFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/empty_tall_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="9dp"
                android:text="@string/inventory_summary"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        card_view:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_dashboard_total_items"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/text_total_item_ammount"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/default_dashboard_value"
                                android:textAlignment="center"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/dashboard_items"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        card_view:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_dashboard_total_quantity"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/text_stock_ammount"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/default_dashboard_value"
                                android:textAlignment="center"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/dashboard_quantity"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        card_view:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_dashboard_total_tags"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/text_total_tags_ammount"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/default_dashboard_value"
                                android:textAlignment="center"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/dashboard_tags"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="15dp"
                        app:cardPreventCornerOverlap="true"
                        card_view:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="100dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_dashboard_total_value"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/text_total_ammount"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/default_dashboard_value_ammount"
                                android:textAlignment="center"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/dashboard_value"
                                android:textAlignment="center"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="9dp"
                android:text="@string/recent_items"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <ViewSwitcher
                android:id="@+id/recent_items_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:measureAllChildren="false">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:text="@string/no_items"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_productos_recientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </ViewSwitcher>
        </LinearLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

