<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container_products"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductListFragment">

    <ViewSwitcher
        android:id="@+id/simpleViewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/scroll_producto_vacio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/empty_tall_divider"
            android:padding="50dip"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:src="@drawable/ic_product_empty_box" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_product_1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_product_2"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="20sp" />
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sort_items_list_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/sort_by_name"
                android:textAllCaps="false"
                app:drawableStartCompat="@drawable/ic_sort_menos_mas">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_productos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:divider="@drawable/empty_tall_divider_small"
                android:orientation="vertical"
                android:showDividers="middle" />
        </LinearLayout>

    </ViewSwitcher>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>